--- a/index.html
+++ b/index.html
@@ -2,32 +2,80 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>My Game Hub</title>
+  <title>Neon Game Hub</title>
   <style>
-    body { background:#050816; color:#f5f5f5; font-family:Arial, sans-serif; text-align:center; }
-    h1 { margin-top:40px; }
-    .game-grid { display:flex; flex-wrap:wrap; justify-content:center; gap:20px; margin-top:30px; }
-    .card { background:#111827; padding:15px 20px; border-radius:10px; width:220px; box-shadow:0 0 15px #000; }
-    .card h2 { font-size:18px; margin-bottom:10px; }
-    .card a { color:#38bdf8; text-decoration:none; }
-    .card a:hover { text-decoration:underline; }
+    body {
+      background: #05010f;
+      color: #e0e0ff;
+      font-family: 'Arial', sans-serif;
+      text-align: center;
+      margin: 0;
+      padding: 0;
+    }
+
+    h1 {
+      margin-top: 40px;
+      font-size: 48px;
+      color: #7df9ff;
+      text-shadow: 0 0 15px #00eaff, 0 0 30px #00eaff;
+    }
+
+    p {
+      font-size: 18px;
+      color: #b8b8ff;
+    }
+
+    .game-grid {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 25px;
+      margin-top: 40px;
+      padding-bottom: 60px;
+    }
+
+    .card {
+      background: #0a0220;
+      border: 2px solid #7df9ff;
+      border-radius: 12px;
+      width: 240px;
+      padding: 20px;
+      box-shadow: 0 0 20px #00eaff55;
+      transition: 0.2s;
+    }
+
+    .card:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 30px #00eaffaa;
+    }
+
+    .card h2 {
+      color: #7df9ff;
+      font-size: 22px;
+      margin-bottom: 10px;
+      text-shadow: 0 0 10px #00eaff;
+    }
+
+    .card p {
+      color: #cfcfff;
+      font-size: 14px;
+      margin-bottom: 15px;
+    }
+
+    .card a {
+      color: #ff66ff;
+      font-size: 16px;
+      text-decoration: none;
+      font-weight: bold;
+      text-shadow: 0 0 10px #ff00ff;
+    }
+
+    .card a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
-<body>
-  <h1>My Game Hub</h1>
-  <p>Welcome! Click a game below to play.</p>
 
-  <div class="game-grid">
-    <div class="card">
-      <h2>Example Game 1</h2>
-      <p>Short description of the game.</p>
-      <a href="https://example.com" target="_blank">Play</a>
-    </div>
-    <div class="card">
-      <h2>Example Game 2</h2>
-      <p>Another game description.</p>
-      <a href="https://example.com" target="_blank">Play</a>
-    </div>
-  </div>
-</body>
-</html>
+<body>
+  <h1>Neon Game Hub</h1>
+  <p>Welcome to
