--- a/index.html
+++ b/index.html
@@ -25,6 +25,20 @@
       color: #b8b8ff;
     }
 
+    /* Search bar */
+    #searchBar {
+      margin-top: 20px;
+      padding: 10px;
+      width: 60%;
+      max-width: 400px;
+      border-radius: 8px;
+      border: 2px solid #7df9ff;
+      background: #0a0220;
+      color: #e0e0ff;
+      font-size: 16px;
+      box-shadow: 0 0 10px #00eaff;
+    }
+
     .game-grid {
       display: flex;
       flex-wrap: wrap;
@@ -80,76 +94,96 @@
   <h1>Neon Games</h1>
   <p>Welcome to Neon Games — choose a game below.</p>
 
+  <!-- Search bar -->
+  <input type="text" id="searchBar" placeholder="Search games...">
+
   <div class="game-grid">
 
-   <!-- 1 -->
-<div class="card">
-  <h2>OvO</h2>
-  <p>Fast parkour platformer with precise movement.</p>
-  <a href="https://ovo-game.github.io" target="_blank">Play</a>
-</div>
+    <!-- 1 -->
+    <div class="card">
+      <h2>OvO</h2>
+      <p>Fast parkour platformer with precise movement.</p>
+      <a href="https://ovo-game.github.io" target="_blank">Play</a>
+    </div>
 
-<!-- 2 -->
-<div class="card">
-  <h2>Vex 5</h2>
-  <p>Modern stickman obstacle course with traps.</p>
-  <a href="https://vex5.org" target="_blank">Play</a>
-</div>
+    <!-- 2 -->
+    <div class="card">
+      <h2>Vex 5</h2>
+      <p>Modern stickman obstacle course with traps.</p>
+      <a href="https://vex5.org" target="_blank">Play</a>
+    </div>
 
-<!-- 3 -->
-<div class="card">
-  <h2>Tunnel Rush</h2>
-  <p>Dodge obstacles in a neon tunnel at high speed.</p>
-  <a href="https://tunnelrush.app" target="_blank">Play</a>
-</div>
+    <!-- 3 -->
+    <div class="card">
+      <h2>Tunnel Rush</h2>
+      <p>Dodge obstacles in a neon tunnel at high speed.</p>
+      <a href="https://tunnelrush.app" target="_blank">Play</a>
+    </div>
 
-<!-- 4 -->
-<div class="card">
-  <h2>Color Tunnel</h2>
-  <p>Roll through a colorful tunnel and avoid shapes.</p>
-  <a href="https://colortunnel.io" target="_blank">Play</a>
-</div>
+    <!-- 4 -->
+    <div class="card">
+      <h2>Color Tunnel</h2>
+      <p>Roll through a colorful tunnel and avoid shapes.</p>
+      <a href="https://colortunnel.io" target="_blank">Play</a>
+    </div>
 
-<!-- 5 -->
-<div class="card">
-  <h2>Drift Boss</h2>
-  <p>Tap to drift around corners and stay on the track.</p>
-  <a href="https://driftboss.io" target="_blank">Play</a>
-</div>
+    <!-- 5 -->
+    <div class="card">
+      <h2>Drift Boss</h2>
+      <p>Tap to drift around corners and stay on the track.</p>
+      <a href="https://driftboss.io" target="_blank">Play</a>
+    </div>
 
-<!-- 6 -->
-<div class="card">
-  <h2>Moto X3M</h2>
-  <p>Bike stunt game with flips and crazy tracks.</p>
-  <a href="https://motox3m.co" target="_blank">Play</a>
-</div>
+    <!-- 6 -->
+    <div class="card">
+      <h2>Moto X3M</h2>
+      <p>Bike stunt game with flips and crazy tracks.</p>
+      <a href="https://motox3m.co" target="_blank">Play</a>
+    </div>
 
-<!-- 7 -->
-<div class="card">
-  <h2>2048</h2>
-  <p>Slide tiles to combine numbers and reach 2048.</p>
-  <a href="https://play2048.co" target="_blank">Play</a>
-</div>
+    <!-- 7 -->
+    <div class="card">
+      <h2>2048</h2>
+      <p>Slide tiles to combine numbers and reach 2048.</p>
+      <a href="https://play2048.co" target="_blank">Play</a>
+    </div>
 
-<!-- 8 -->
-<div class="card">
-  <h2>Snake Neon</h2>
-  <p>Classic snake with a glowing neon twist.</p>
-  <a href="https://playsnake.org" target="_blank">Play</a>
-</div>
+    <!-- 8 -->
+    <div class="card">
+      <h2>Snake Neon</h2>
+      <p>Classic snake with a glowing neon twist.</p>
+      <a href="https://playsnake.org" target="_blank">Play</a>
+    </div>
 
-<!-- 9 -->
-<div class="card">
-  <h2>Basketball Stars</h2>
-  <p>1v1 basketball with dunks and power-ups.</p>
-  <a href="https://basketballstars.co" target="_blank">Play</a>
-</div>
+    <!-- 9 -->
+    <div class="card">
+      <h2>Basketball Stars</h2>
+      <p>1v1 basketball with dunks and power-ups.</p>
+      <a href="https://basketballstars.co" target="_blank">Play</a>
+    </div>
 
-<!-- 10 -->
-<div class="card">
-  <h2>Idle Breakout</h2>
-  <p>Break bricks, upgrade balls, and watch chaos.</p>
-  <a href="https://idlebreakout.io" target="_blank">Play</a>
-</div>
+    <!-- 10 -->
+    <div class="card">
+      <h2>Idle Breakout</h2>
+      <p>Break bricks, upgrade balls, and watch chaos.</p>
+      <a href="https://idlebreakout.io" target="_blank">Play</a>
+    </div>
+
+  </div>
+
+  <!-- Search script -->
+  <script>
+    const searchBar = document.getElementById("searchBar");
+    searchBar.addEventListener("keyup", function() {
+      const term = searchBar.value.toLowerCase();
+      const cards = document.querySelectorAll(".card");
+
+      cards.forEach(card => {
+        const title = card.querySelector("h2").textContent.toLowerCase();
+        card.style.display = title.includes(term) ? "block" : "none";
+      });
+    });
+  </script>
+
 </body>
 </html>
