--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
       color: #b8b8ff;
     }
 
-    /* Search bar */
     #searchBar {
       margin-top: 20px;
       padding: 10px;
@@ -94,84 +93,72 @@
   <h1>Neon Games</h1>
   <p>Welcome to Neon Games — choose a game below.</p>
 
-  <!-- Search bar -->
   <input type="text" id="searchBar" placeholder="Search games...">
 
   <div class="game-grid">
 
-    <!-- 1 -->
-    <div class="card">
-      <h2>OvO</h2>
-      <p>Fast parkour platformer with precise movement.</p>
-      <a href="https://ovo-game.github.io" target="_blank">Play</a>
-    </div>
-
-    <!-- 2 -->
-    <div class="card">
-      <h2>Vex 5</h2>
-      <p>Modern stickman obstacle course with traps.</p>
-      <a href="https://vex5.org" target="_blank">Play</a>
-    </div>
-
-    <!-- 3 -->
-    <div class="card">
-      <h2>Tunnel Rush</h2>
-      <p>Dodge obstacles in a neon tunnel at high speed.</p>
-      <a href="https://tunnelrush.app" target="_blank">Play</a>
-    </div>
-
-    <!-- 4 -->
-    <div class="card">
-      <h2>Color Tunnel</h2>
-      <p>Roll through a colorful tunnel and avoid shapes.</p>
-      <a href="https://colortunnel.io" target="_blank">Play</a>
-    </div>
-
-    <!-- 5 -->
-    <div class="card">
-      <h2>Drift Boss</h2>
-      <p>Tap to drift around corners and stay on the track.</p>
-      <a href="https://driftboss.io" target="_blank">Play</a>
-    </div>
-
-    <!-- 6 -->
-    <div class="card">
-      <h2>Moto X3M</h2>
-      <p>Bike stunt game with flips and crazy tracks.</p>
-      <a href="https://motox3m.co" target="_blank">Play</a>
-    </div>
-
-    <!-- 7 -->
     <div class="card">
       <h2>2048</h2>
-      <p>Slide tiles to combine numbers and reach 2048.</p>
-      <a href="https://play2048.co" target="_blank">Play</a>
+      <p>Slide tiles to reach 2048.</p>
+      <a href="games/2048.html">Play</a>
     </div>
 
-    <!-- 8 -->
     <div class="card">
-      <h2>Snake Neon</h2>
-      <p>Classic snake with a glowing neon twist.</p>
-      <a href="https://playsnake.org" target="_blank">Play</a>
+      <h2>Tetris</h2>
+      <p>Classic falling block puzzle.</p>
+      <a href="games/tetris.html">Play</a>
     </div>
 
-    <!-- 9 -->
     <div class="card">
-      <h2>Basketball Stars</h2>
-      <p>1v1 basketball with dunks and power-ups.</p>
-      <a href="https://basketballstars.co" target="_blank">Play</a>
+      <h2>Snake</h2>
+      <p>Grow your snake without crashing.</p>
+      <a href="games/snake.html">Play</a>
     </div>
 
-    <!-- 10 -->
     <div class="card">
-      <h2>Idle Breakout</h2>
-      <p>Break bricks, upgrade balls, and watch chaos.</p>
-      <a href="https://idlebreakout.io" target="_blank">Play</a>
+      <h2>Breakout</h2>
+      <p>Destroy bricks with a bouncing ball.</p>
+      <a href="games/breakout.html">Play</a>
+    </div>
+
+    <div class="card">
+      <h2>Flappy Bird</h2>
+      <p>Tap to fly through pipes.</p>
+      <a href="games/flappy.html">Play</a>
+    </div>
+
+    <div class="card">
+      <h2>Pac-Man</h2>
+      <p>Eat pellets and avoid ghosts.</p>
+      <a href="games/pacman.html">Play</a>
+    </div>
+
+    <div class="card">
+      <h2>Asteroids</h2>
+      <p>Blast asteroids in space.</p>
+      <a href="games/asteroids.html">Play</a>
+    </div>
+
+    <div class="card">
+      <h2>Dino Game</h2>
+      <p>Jump over cacti in this classic clone.</p>
+      <a href="games/dino.html">Play</a>
+    </div>
+
+    <div class="card">
+      <h2>Hextris</h2>
+      <p>Rotate the hexagon to match colors.</p>
+      <a href="games/hextris.html">Play</a>
+    </div>
+
+    <div class="card">
+      <h2>Minesweeper</h2>
+      <p>Clear the board without hitting mines.</p>
+      <a href="games/minesweeper.html">Play</a>
     </div>
 
   </div>
 
-  <!-- Search script -->
   <script>
     const searchBar = document.getElementById("searchBar");
     searchBar.addEventListener("keyup", function() {
