--- a/index.html
+++ b/index.html
@@ -20,13 +20,8 @@
     }
 
     /* THEMES */
-    body.dark {
-      background: #000000;
-    }
-
-    body.forest {
-      background: radial-gradient(circle at center, #001f0f, #000000 80%);
-    }
+    body.dark { background: #000000; }
+    body.forest { background: radial-gradient(circle at center, #001f0f, #000000 80%); }
 
     /* Floating Orbs */
     .orb, .orb2 {
@@ -231,11 +226,6 @@
       font-size: 14px;
     }
 
-    .settings-panel select,
-    .settings-panel input[type="checkbox"] {
-      margin-bottom: 10px;
-    }
-
     .reset-btn {
       margin-top: 20px;
       width: 100%;
@@ -247,7 +237,6 @@
       cursor: pointer;
       font-weight: bold;
     }
-
   </style>
 </head>
 <body>
@@ -343,8 +332,19 @@
     function openLink(url) { window.location.href = url; }
 
     function toggleSettings() {
-      document.getElementById("settingsPanel").classList.toggle("open");
+      const panel = document.getElementById("settingsPanel");
+      panel.classList.toggle("open");
     }
+
+    /* CLICK OUTSIDE TO CLOSE */
+    document.addEventListener("click", function(e) {
+      const panel = document.getElementById("settingsPanel");
+      const btn = document.querySelector(".settings-btn");
+
+      if (!panel.contains(e.target) && !btn.contains(e.target)) {
+        panel.classList.remove("open");
+      }
+    });
 
     function applyTheme() {
       const theme = document.getElementById("themeSelect").value;
