--- a/index.html
+++ b/index.html
@@ -19,11 +19,9 @@
       transition: background 0.6s ease;
     }
 
-    /* THEMES */
     body.dark { background: #000000; }
     body.forest { background: radial-gradient(circle at center, #001f0f, #000000 80%); }
 
-    /* Floating Orbs */
     .orb, .orb2 {
       position: fixed;
       border-radius: 50%;
@@ -60,7 +58,6 @@
       100% { transform: translate(-40px,-40px); opacity: 1; }
     }
 
-    /* Container */
     .container {
       position: relative;
       z-index: 2;
@@ -70,7 +67,6 @@
       padding: 20px;
     }
 
-    /* LOGO */
     .logo {
       font-size: 64px;
       font-weight: bold;
@@ -93,7 +89,6 @@
       opacity: 0.9;
     }
 
-    /* Search Bar */
     #query {
       width: 70vw;
       max-width: 560px;
@@ -107,7 +102,6 @@
       box-shadow: 0 0 15px rgba(0,255,140,0.5);
     }
 
-    /* Buttons */
     .engine-buttons {
       margin-top: 18px;
       display: flex;
@@ -136,7 +130,6 @@
       box-shadow: 0 0 18px rgba(0,255,140,1);
     }
 
-    /* Quick Tiles */
     .tiles {
       margin-top: 28px;
       display: flex;
@@ -171,7 +164,6 @@
       text-shadow: 0 0 8px #00ff9c;
     }
 
-    /* Settings Button */
     .settings-btn {
       position: fixed;
       top: 20px;
@@ -194,7 +186,6 @@
       color: #000;
     }
 
-    /* Settings Panel */
     .settings-panel {
       position: fixed;
       top: 0;
@@ -210,9 +201,7 @@
       color: #d7ffe9;
     }
 
-    .settings-panel.open {
-      right: 0;
-    }
+    .settings-panel.open { right: 0; }
 
     .settings-panel h2 {
       color: #00ffb3;
@@ -238,7 +227,6 @@
       font-weight: bold;
     }
 
-    /* Mascot */
     .mascot {
       position: fixed;
       bottom: 20px;
@@ -277,6 +265,131 @@
       0%,100% { opacity: 0.6; transform: scale(1); }
       50% { opacity: 1; transform: scale(1.15); }
     }
+
+    /* Hidden cloak dot */
+    .cloak-dot {
+      position: fixed;
+      top: 4px;
+      left: 4px;
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      background: transparent;
+      cursor: pointer;
+      z-index: 30;
+    }
+
+    .cloak-dot:hover {
+      background: rgba(255,255,255,0.1);
+    }
+
+    /* CLOAK MODE: fake learning site */
+    .cloak-mode body { background: #f4f5f7; }
+
+    .cloak-wrapper {
+      display: none;
+      position: relative;
+      z-index: 2;
+      max-width: 900px;
+      width: 100%;
+      padding: 20px;
+      font-family: system-ui, sans-serif;
+      color: #222;
+    }
+
+    .cloak-active .container,
+    .cloak-active .mascot,
+    .cloak-active .settings-btn,
+    .cloak-active .orb,
+    .cloak-active .orb2 {
+      display: none !important;
+    }
+
+    .cloak-active .cloak-wrapper {
+      display: block;
+    }
+
+    .cloak-active body {
+      background: #f4f5f7 !important;
+    }
+
+    .cloak-card {
+      background: #ffffff;
+      border-radius: 10px;
+      padding: 16px 18px;
+      margin-bottom: 14px;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.08);
+    }
+
+    .cloak-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 16px;
+    }
+
+    .cloak-title {
+      font-size: 22px;
+      font-weight: 600;
+      color: #1f2933;
+    }
+
+    .cloak-sub {
+      font-size: 13px;
+      color: #6b7280;
+    }
+
+    .cloak-badge {
+      font-size: 11px;
+      padding: 4px 8px;
+      border-radius: 999px;
+      background: #e5f2ff;
+      color: #2563eb;
+      font-weight: 600;
+    }
+
+    .cloak-table {
+      width: 100%;
+      border-collapse: collapse;
+      font-size: 13px;
+      margin-top: 6px;
+    }
+
+    .cloak-table th,
+    .cloak-table td {
+      padding: 6px 4px;
+      text-align: left;
+      border-bottom: 1px solid #e5e7eb;
+    }
+
+    .cloak-table th {
+      font-weight: 600;
+      color: #4b5563;
+    }
+
+    .cloak-tag {
+      font-size: 11px;
+      padding: 2px 6px;
+      border-radius: 999px;
+      background: #ecfdf3;
+      color: #166534;
+      display: inline-block;
+    }
+
+    .cloak-input {
+      width: 100%;
+      padding: 8px 10px;
+      border-radius: 6px;
+      border: 1px solid #d1d5db;
+      font-size: 13px;
+      margin-top: 4px;
+    }
+
+    .cloak-small {
+      font-size: 11px;
+      color: #6b7280;
+      margin-top: 4px;
+    }
   </style>
 </head>
 <body>
@@ -309,7 +422,7 @@
     <button class="reset-btn" onclick="resetSettings()">Reset Settings</button>
   </div>
 
-  <div class="container">
+  <div class="container" id="nmContainer">
     <div class="logo">NatureMonkey</div>
     <div class="tagline">A clean, neon-powered start to your web.</div>
 
@@ -351,6 +464,50 @@
   <div class="mascot">
     <div class="mascot-glow"></div>
     <div class="mascot-body">🐒</div>
+  </div>
+
+  <!-- Hidden cloak dot -->
+  <div class="cloak-dot" id="cloakDot"></div>
+
+  <!-- Cloak mode fake learning hub -->
+  <div class="cloak-wrapper" id="cloakWrapper">
+    <div class="cloak-card cloak-header">
+      <div>
+        <div class="cloak-title">School Learning Hub</div>
+        <div class="cloak-sub">Today’s overview • Study planner & assignments</div>
+      </div>
+      <div class="cloak-badge">Student Portal</div>
+    </div>
+
+    <div class="cloak-card">
+      <strong>Upcoming Assignments</strong>
+      <table class="cloak-table">
+        <tr>
+          <th>Class</th><th>Task</th><th>Due</th><th>Status</th>
+        </tr>
+        <tr>
+          <td>Math</td><td>Practice worksheet</td><td>Tomorrow</td><td><span class="cloak-tag">In progress</span></td>
+        </tr>
+        <tr>
+          <td>Science</td><td>Chapter 4 reading</td><td>Friday</td><td>Not started</td>
+        </tr>
+        <tr>
+          <td>English</td><td>Essay outline</td><td>Next week</td><td>Not started</td>
+        </tr>
+      </table>
+    </div>
+
+    <div class="cloak-card">
+      <strong>Study Notes</strong>
+      <input class="cloak-input" placeholder="Type quick notes about what you’re studying...">
+      <div class="cloak-small">Notes are local to this device.</div>
+    </div>
+
+    <div class="cloak-card">
+      <strong>Reading Time Tracker</strong>
+      <div class="cloak-small">Today’s goal: 20 minutes of focused reading.</div>
+      <input class="cloak-input" placeholder="Book / topic you’re reading...">
+    </div>
   </div>
 
   <script>
@@ -431,6 +588,29 @@
     document.querySelector(".mascot").addEventListener("click", () => {
       alert("Noko (your NatureMonkey mascot) says hi! 🌿🐒");
     });
+
+    // CLOAK MODE
+    const cloakDot = document.getElementById("cloakDot");
+    const cloakWrapper = document.getElementById("cloakWrapper");
+
+    function setCloak(active) {
+      if (active) {
+        document.documentElement.classList.add("cloak-active");
+        localStorage.setItem("cloakMode", "true");
+      } else {
+        document.documentElement.classList.remove("cloak-active");
+        localStorage.setItem("cloakMode", "false");
+      }
+    }
+
+    cloakDot.addEventListener("click", () => {
+      const isActive = document.documentElement.classList.contains("cloak-active");
+      setCloak(!isActive);
+    });
+
+    // Load cloak state
+    const savedCloak = localStorage.getItem("cloakMode") === "true";
+    setCloak(savedCloak);
   </script>
 
 </body>
